--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,8 @@
 {
+  "indent": 2,
+  "strict": true,
   "node": true,
-  "jasmine": true
+  "undef": true,
+  "unused": true,
+  "maxcomplexity": 5
 }
-
